<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="@dimen/_15dp"
            android:paddingLeft="@dimen/_15dp">

            <TextView
                android:id="@+id/txt_name_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_20sp"
                android:textStyle="bold" />

            <!--Line 1-->
            <LinearLayout
                android:id="@+id/llInformatioOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_name_people"
                android:layout_marginTop="@dimen/_30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_height"
                        android:textSize="@dimen/text_15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_mass"
                        android:textSize="@dimen/text_15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_mass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <!--Line 2-->
            <LinearLayout
                android:id="@+id/llInformatioTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_name_people"
                android:layout_marginTop="@dimen/_30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_hair_color"
                        android:textSize="@dimen/text_15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_hair_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_skin_color"
                        android:textSize="@dimen/text_15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_skin_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <!--Line 3-->
            <LinearLayout
                android:id="@+id/llInformatioThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_name_people"
                android:layout_marginTop="@dimen/_30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_eye_color"
                        android:textSize="@dimen/text_15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_eye_color"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_birth_year"
                        android:textSize="@dimen/text_15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_birth_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <!--Line 4-->
            <LinearLayout
                android:id="@+id/llInformatioFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_name_people"
                android:layout_marginTop="@dimen/_30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_gender"
                        android:textSize="@dimen/text_15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_homeworld"
                        android:textSize="@dimen/text_15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_homeworld"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <!--Line 5-->
            <LinearLayout
                android:id="@+id/llInformatioFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llInformatioOne"
                android:layout_marginTop="@dimen/_30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_date_created"
                        android:textSize="@dimen/text_15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_date_created"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_date_edited"
                        android:textSize="@dimen/text_15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_date_edited"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <!--Line 6-->
            <LinearLayout
                android:id="@+id/llInformatioFSix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llInformatioOne"
                android:layout_marginTop="@dimen/_30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_films"
                        android:textSize="@dimen/text_15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_films"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_18sp"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/_4dp"/>
                </LinearLayout>
            </LinearLayout>

            <!--Line 7-->
            <LinearLayout
                android:id="@+id/llInformationSeven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llInformatioOne"
                android:layout_marginTop="@dimen/_30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_species"
                        android:textSize="@dimen/text_15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_species"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_18sp"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/_4dp"/>
                </LinearLayout>
            </LinearLayout>

            <!--Line 8-->
            <LinearLayout
                android:id="@+id/llInformationEight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llInformatioOne"
                android:layout_marginTop="@dimen/_30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_vehicles"
                        android:textSize="@dimen/text_15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_vehicles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_18sp"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/_4dp"/>
                </LinearLayout>
            </LinearLayout>

            <!--Line 8-->
            <LinearLayout
                android:id="@+id/llInformationNine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llInformatioOne"
                android:layout_marginTop="@dimen/_30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_starships"
                        android:textSize="@dimen/text_15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/txt_starships"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_18sp"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/_4dp"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>